Fix waveform in dark mode.Move rules to shared css

--- a/ArticleTemplates/assets/scss/layout/_article--comment.scss
+++ b/ArticleTemplates/assets/scss/layout/_article--comment.scss
@@ -35,12 +35,5 @@
                 line-height: 1.25em;
             }
         }
-
-        .listen-to-article__container {
-            .audio-player__info__label,
-            .audio-player__info__duration {
-                color: color(tone-comment-text);
-            }
-        }
     }
 }
