--- a/ArticleTemplates/assets/scss/themes/darkMode/_darkModeArticle.scss
+++ b/ArticleTemplates/assets/scss/themes/darkMode/_darkModeArticle.scss
@@ -111,11 +111,6 @@
             color: $warmGreyFour !important;
         }
 
-        .listen-to-article__container .audio-player__info__label,
-        .listen-to-article__container .audio-player__info__duration {
-            color: #F6F6F6;
-        }
-
         .alerts span.following[data-icon] {
             background-color: $p-inverted;
             &:before {
